--- a/_posts/2015-04-18-dummy2.md
+++ b/_posts/2015-04-18-dummy2.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Dummy Post 2"
 date:   2015-04-18T14:25:52-05:00
 author: Ben Centra
-categories: Automotive
+# categories: Automotive
 category: Automotive
 ---
 
