--- a/_posts/2024-05-10-C#-Study-01.md
+++ b/_posts/2024-05-10-C#-Study-01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "C# Study 01-[C# Windows Form 생성, Dock/Anchor]"
+title:  "C# Study 01-[Windows Form 생성, Dock/Anchor]"
 date:   2024-05-10
 author: Yongjun Kim
 categories: Languages
