--- a/_posts/2024-05-21-C#-Study-02.md
+++ b/_posts/2024-05-21-C#-Study-02.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "C# Study 02-[C# Newtonsoft.Json]"
+title:  "C# Study 02-[Newtonsoft.Json]"
 date:   2024-05-21
 author: Yongjun Kim
 categories: Languages
-tags:	C# Dock Anchor GUI Form MinimumSize
+tags:	C# Json Newtonsoft dll포함하여빌드하기
 cover:  "/assets/korea_river_byKYJ.jpg"
 ---
 
