--- a/_posts/2024-05-28-C#-Study-04.md
+++ b/_posts/2024-05-28-C#-Study-04.md
@@ -4,8 +4,8 @@ title:  "C# Study 04-[Protobuf]"
 date:   2024-05-21
 author: Yongjun Kim
 categories: Languages
-tags:	C# Json google protobuf proto
-cover:  "/assets/korea_river_byKYJ.jpg"
+tags:	C# Json google protobuf serialization
+cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
 
 
@@ -22,21 +22,17 @@ cover:  "/assets/korea_river_byKYJ.jpg"
 <br><br><br>
 
 #### 1.3 Overview <br>
-Protobuf로 직렬 효율성을 최대화 하기 위한 Framework(?) 사용 절차는 다음과 같다
-- (1) 사용하고자 하는 Json data에 맞게 *.proto 파일 작성하기<br>
-> - *.proto는 직접 작성해도 되고, 사용하고자 하는 Json data의 구조가 복잡하다면 "Json to Proto" Python Opensource 사용을 추천한다!! 생각보다 구조 변환이 잘 돼서 놀랐음..<br>
-> [<u>Json2Proto_Link_Here</u>](https://pypi.org/project/py-json-to-proto/)<br><br>
-> - Json to Proto 사용법은 아주아주 간단함.. 링크에 접속 후 아래와 같이 pip install 해주고<br>
-
-{% highlight html %}
-{% raw %}
+Protobuf로 직렬 효율성을 최대화 하기 위한 Framework(?) 사용 절차는 다음과 같다<br><br>
+(1) 사용하고자 하는 Json data에 맞게 *.proto 파일 작성하기<br>
+- *.proto는 직접 작성해도 되고, 사용하고자 하는 Json data의 구조가 복잡하다면 "Json to Proto" Python Opensource 사용을 추천한다!! 생각보다 구조 변환이 잘 돼서 놀랐음..<br> [<u>Json2Proto_Link_Here</u>](https://pypi.org/project/py-json-to-proto/)<br><br>
+- Json to Proto 사용법은 아주아주 간단함.. 링크에 접속 후 아래와 같이 pip install 해주고
+```python
 pip install py_json_to_proto
-{% endraw %}
-{% endhighlight %}
+```
 
-> - 아래와 같이 소스코드 쓰면 된다<br>
-{% highlight html %}
-{% raw %}
+- 아래와 같이 소스코드 쓰면 된다
+
+```python
 from py_json_to_proto.convert import convert, Options
 
 # Read in your json file and then convert to proto string
@@ -46,27 +42,33 @@ with open('test.json', 'r') as file:
 # You're done, save the proto string
 with open(args.output_file, 'w') as file:
     file.write(str(data))
-{% endraw %}
-{% endhighlight %}
+```
 
-> - 링크에서 보면 Read쪽에 괄호 오타가 있는 듯.. ㅎㅎ 여튼 해당 소스로 *.proto 생성 완료! <br><br>
+- 링크에서 보면 Read쪽에 괄호 오타가 있는 듯.. ㅎㅎ 여튼 해당 소스로 *.proto 생성 완료 <br>
 
+- Json to Proto 오픈소스가 잘 동작하는 줄 알았는데, 마냥 그런건 또 아닌 듯 함; Json 구조에 따라 다르겠지만 조금 복잡하거나 배열 형태로 값이 있거나 없거나를 반복하면 놓치는 타입이 있거나, type을 잘 못 잡기도 함..
+__!!따라서 생성 후에 검토하는 작업 필수!!__
 
- - (2) Compiler downloads<br><br>
-다음 링크에서 Windows/Linux에 따라 컴파일러 다운 받으면 됨,<br>
+<br>
+(2) Compiler downloads<br>
+- 아래 링크에서 Windows/Linux에 따라 컴파일러 다운 받으면 됨
 > - 링크 클릭 -> Latest version -> 제일 하단 Assets에서 (windows의 경우) Protoc-27.0-win64.zip 다운로드 & 압축풀기<br>
 > [<u>Protobuf_compiler_download_Here</u>](https://protobuf.dev/downloads/)<br><br>
 
-- (3) 생성한 *.proto 파일을 이용해서 Protobuf Compile하기
-> - 다음과 같이 배치 파일에 명령어를 쓰고 실행해도 되고,
-{% highlight html %}
-{% raw %}
+- 생성한 *.proto 파일을 이용해서 Protobuf Compile하기
+> 다음과 같이 배치 파일에 명령어를 쓰고 실행해도 되고,
+```
 protoc.exe --csharp_out=./ name.proto
-{% endraw %}
-{% endhighlight %}
-> - (참고로 실행파일이 있는 위치에 해당 bat을 위치시키고 실행 시켜야 하고)
-> - (--csharp_out 은 사용할 언어에 맞게 수정 필수)
-> - (--csharp_out=./생성될 파일이 저장될 위치인데, 그냥 두면 실행 경로에 생성됨)
-> - (중요! 한 칸 뛰우고 아까 생성했던 *.proto 파일 명을 입력하면 됨,, 나의 경우에 배치파일 편집시엔 뛰어져있었으나 실행이 안돼서 cmd로 복사해 보니 출력 경로 사이에 공백이 없어서 계속 생성이 안됐음...)<br><br>
-> - 그냥 실행파일 경로로 가서 위에서 작성한 배치파일 내용을 cmd로 입력해도 됨!
-<br><br><br>
+```
+> (참고로 실행파일이 있는 위치에 해당 bat을 위치시키고 실행 시켜야 하고)<br>
+> (--csharp_out 은 사용할 언어에 맞게 수정 필수)<br>
+> (--csharp_out=./생성될 파일이 저장될 위치인데, 그냥 두면 실행 경로에 생성됨)<br>
+> (중요! 한 칸 뛰우고 아까 생성했던 *.proto 파일 명을 입력하면 됨,, 나의 경우에 배치파일 편집시엔 뛰어져있었으나 실행이 안돼서 cmd로 복사해 보니 출력 경로 사이에 공백이 없어서 계속 생성이 안됐음...)<br><br>
+> 그냥 실행파일 경로로 가서 위에서 작성한 배치파일 내용을 cmd로 입력해도 됨!
+<br>
+
+- 생성 된 *.cs파일 확인
+> 아까 생성한 *.proto 파일 이름에 맞춰서 설정한 출력 경로에 *.cs가 생성될 것임, 사용하려는 프로젝트에 추가해서 사용하면 됨!
+<br>
+
+
