--- a/_posts/C#/2024-05-25-C#-Study-03.md
+++ b/_posts/C#/2024-05-25-C#-Study-03.md
@@ -4,7 +4,81 @@ title:  "C# Study 03-[Cuncerrent Qeueu and Thread]"
 date:   2024-05-21
 author: Yongjun Kim
 categories: Languages
-tags:	C# Json Newtonsoft dll포함하여빌드하기
+tags:	C# Concurrency ConcurrentQueue Thread
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
 
+### 1. Concurrent Queue
+C#에서는 Concurrency를 보장하는 Queue를 System library로 제공한다, 여러 Thread에서 동시에 처리할 수 있는 큐로써, 동시성 및 안정성을 보장한다.
+
+#### 1.1 Sample Code
+Concurrent Queue는 System.Collection에서 추가 가능하다. 사용 방법은 아래와 같다.
+
+```C#
+using System;
+using System.Collections.Concurrent;
+using System.Threading;
+
+class Program
+{
+    // Queu 객체 생성
+    static ConcurrentQueue<int> queue = new ConcurrentQueue<int>();
+    static bool done = false;
+
+    static void Main(string[] args)
+    {
+        // 생성자 스레드 객체 생성
+        Thread producer = new Thread(Producer);
+
+        // 소비자 스레드 객체 생성
+        Thread consumer = new Thread(Consumer);
+
+        // 스레드 시작
+        producer.Start(1);
+        consumer.Start(1);
+
+        // 생성자 스레드들이 종료될 때까지 대기
+        producer.Join();
+        done = true;
+
+        // 소비자 스레드들이 종료될 때까지 대기
+        consumer.Join();
+
+        Console.WriteLine("Processing complete.");
+    }
+
+    // Producer Thread
+    static void Producer(object id)
+    {
+        int producerId = (int)id;
+        for (int i = 0; i < 10; i++)
+        {
+            int item = producerId * 10 + i;
+            queue.Enqueue(item); // Enqueue
+            Console.WriteLine($"Producer {producerId} enqueued {item}");
+            Thread.Sleep(100); // Waiting
+        }
+    }
+
+    // Consumer Thread
+    static void Consumer(object id)
+    {
+        int consumerId = (int)id;
+        while (!done || !queue.IsEmpty)
+        {
+            // Dequeue
+            if (queue.TryDequeue(out int item))
+            {
+                Console.WriteLine($"Consumer {consumerId} dequeued {item}");
+            }
+            else
+            {
+                Thread.Sleep(50); // Waiting if queue is empty
+            }
+        }
+    }
+}
+
+```
+
+C#에서는 위와 같이 GUI에 접근하는 함수들을 쓰레드로 분리하고, 공통으로 사용하는 data를 Concurrent Queue로 관리할 수 있는 기능을 제공하므로 Pyqt보다 안정성이 뛰어난 듯 하다..<br><br>
