--- a/_posts/GItblog/2024-06-08-Gitblog-03.md
+++ b/_posts/GItblog/2024-06-08-Gitblog-03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Gitblog 03 Paginator"
+title:  "Gitblog 03-[Paginator]"
 date:   2024-06-08
 author: Yongjun Kim
 categories: Gitblog
