--- a/_posts/GItblog/2024-06-08-Gitblog-03.md
+++ b/_posts/GItblog/2024-06-08-Gitblog-03.md
@@ -4,7 +4,7 @@ title:  "Gitblog 03-[Paginator]"
 date:   2024-06-08
 author: Yongjun Kim
 categories: Gitblog
-tags:	github gitblog jekyll ruby pagenator jekyll-paginate
+tags:	github gitblog jekyll ruby pagenator jekyll-paginate안됨
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
 
