--- a/_posts/C#/2024-05-25-C#-Study-03.md
+++ b/_posts/C#/2024-05-25-C#-Study-03.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "C# Study 03-[Cuncerrent Qeueu and Thread]"
+title:  "C# Study 03-[Concurrent Queue and Thread]"
 date:   2024-05-21
 author: Yongjun Kim
 categories: Languages
