--- a/_posts/C#/2024-05-28-Protobuf-01.md
+++ b/_posts/C#/2024-05-28-Protobuf-01.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title:  "C# Study 04-[Protobuf]"
+title:  "Protobuf 01-[Overview]"
 date:   2024-05-21
 author: Yongjun Kim
 categories: Languages
-tags:	C# Json google protobuf serialization
+tags:	Json google protobuf serialization
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
 
@@ -21,7 +21,7 @@ cover:  "/assets/korea_river_byKYJ_gray.jpg"
 이미지 출처: [<u>Protobuf</u>](https://martin.kleppmann.com/2012/12/05/schema-evolution-in-avro-protocol-buffers-thrift.html)
 <br><br><br>
 
-#### 1.3 Overview <br>
+#### 1.3 Overview (feat. C#)<br>
 Protobuf로 직렬 효율성을 최대화 하기 위한 Framework(?) 사용 절차는 다음과 같다<br><br>
 (1) 사용하고자 하는 Json data에 맞게 *.proto 파일 작성하기<br>
 - *.proto는 직접 작성해도 되고, 사용하고자 하는 Json data의 구조가 복잡하다면 "Json to Proto" Python Opensource 사용을 추천한다!! 생각보다 구조 변환이 잘 돼서 놀랐음..<br> [<u>Json2Proto_Link_Here</u>](https://pypi.org/project/py-json-to-proto/)<br><br>
