--- a/_posts/C#/2024-05-10-C#-Study-01.md
+++ b/_posts/C#/2024-05-10-C#-Study-01.md
@@ -3,7 +3,7 @@ layout: post
 title:  "C# Study 01-[Windows Form 생성, Dock/Anchor]"
 date:   2024-05-10
 author: Yongjun Kim
-categories: Languages
+categories: Programming
 tags:	C# Dock Anchor GUI Form MinimumSize
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
