--- a/_posts/C#/2024-05-25-C#-Study-03.md
+++ b/_posts/C#/2024-05-25-C#-Study-03.md
@@ -3,7 +3,7 @@ layout: post
 title:  "C# Study 03-[Concurrent Queue and Thread]"
 date:   2024-05-21
 author: Yongjun Kim
-categories: Languages
+categories: Programming
 tags:	C# Concurrency ConcurrentQueue Thread
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
