--- a/_posts/C#/2024-06-12-Protobuf-02.md
+++ b/_posts/C#/2024-06-12-Protobuf-02.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Protobuf 02-[Usage]"
 date:   2024-05-21
 author: Yongjun Kim
-categories: Languages
+categories: Programming
 tags:	Protobuf google ProtobufCamelCase ProtobufSnakeCase *.proto proto문법 ProtoSyntax
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
