--- a/_posts/Cpp/2024-06-07-Cpp-Study-01.md
+++ b/_posts/Cpp/2024-06-07-Cpp-Study-01.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Cpp Study 01-[Virtual, Protected]"
 date:   2024-06-08
 author: Yongjun Kim
-categories: Languages
+categories: Programming
 tags:	C++ Cpp VirtualFunction Protected Constructor Destructor
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
