--- a/_posts/C#/2024-05-21-C#-Study-02.md
+++ b/_posts/C#/2024-05-21-C#-Study-02.md
@@ -3,7 +3,7 @@ layout: post
 title:  "C# Study 02-[Newtonsoft.Json]"
 date:   2024-05-21
 author: Yongjun Kim
-categories: Languages
+categories: Programming
 tags:	C# Json Newtonsoft dll포함하여빌드하기
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
