--- a/_posts/C#/2024-05-28-Protobuf-01.md
+++ b/_posts/C#/2024-05-28-Protobuf-01.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Protobuf 01-[Overview]"
 date:   2024-05-21
 author: Yongjun Kim
-categories: Languages
+categories: Programming
 tags:	Json google protobuf serialization
 cover:  "/assets/korea_river_byKYJ_gray.jpg"
 ---
