--- a/_posts/C#/2025-08-04-C#-01.md
+++ b/_posts/C#/2025-08-04-C#-01.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "C# Study 01-[Windows Form 생성, Dock/Anchor]"
-date:   2024-05-10
+title:  "C# 01-[Windows Form 생성, Dock/Anchor]"
+date:   2025-08-04
 author: Yongjun Kim
 categories: Programming
 tags:	C# Dock Anchor GUI Form MinimumSize
